Removed/Changed files; Ready for main branch

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ __pycache__/
 .env
 requirements.txt
 scrape/cookies.txt
+scrape/config.py
 scrape/test.py
 sentiment/requirements.txt
 sentiment/cache_models
