added env token to sentiment yml

--- a/.github/workflows/sentiment_analysis.yml
+++ b/.github/workflows/sentiment_analysis.yml
@@ -25,6 +25,8 @@ jobs:
 
       - name: Run main.py
         working-directory: ./sentiment
+        env:
+          HF_TOKEN: ${{ secrets.HF_TOKEN }}
         run: |
           python main.py
       
