--- a/.github/workflows/news_scrapper.yml
+++ b/.github/workflows/news_scrapper.yml
@@ -1,9 +1,9 @@
 name: Daily Finance Scraper
 
-on:
-  schedule:
-    - cron: '0 */13 * * *'  # every 13 hours
-  workflow_dispatch:
+# on:
+#   schedule:
+#     - cron: '0 */13 * * *'  # every 13 hours
+#   workflow_dispatch:
 
 jobs:
   run-scraper:
