--- a/.github/workflows/finrl_prediction.yml
+++ b/.github/workflows/finrl_prediction.yml
@@ -1,9 +1,9 @@
 name: Run FinRL pipeline
 
-on:
-  schedule:
-    - cron: '0 10 * * 4'   # Every Thursday at 10:00 UTC
-  workflow_dispatch:       # Allows manual trigger from GitHub UI
+# on:
+#   schedule:
+#     - cron: '0 10 * * 4'   # Every Thursday at 10:00 UTC
+#   workflow_dispatch:       # Allows manual trigger from GitHub UI
 
 jobs:
   run-finrl-prediction:
